###### TWE 4.2-1 RELEASED ######
2011-08-19 Sasa Bojanic <sasaboy@together.at>
   # build scripts corrected so the sources can be built if they are in the folder which contains spaces in the path

2011-07-22 Sasa Bojanic <sasaboy@together.at>
   # now only producing twe.zip for TWS dependency

2011-07-21 Sasa Bojanic <sasaboy@together.at>
   # now possible to manualy specify "buildid" configuration parameter (e.g. configure -buildid 20110721-0808)

###### TWE 4.1-1 RELEASED ######
2011-06-15 Sasa Bojanic <sasaboy@together.at>
   # improved recognizing of 32/64 bit Java versions when installing through NSIS setup

2011-05-24 Sasa Bojanic <sasaboy@together.at>
   # dependency output for TWS is now in the same folder structure as appears in TWS (tws/Shark/tools/twe)

2011-04-19 Sasa Bojanic <sasaboy@together.at>
   # TWE dependency output for TWS now also contains jxpdl.jar
   
2011-04-14 Sasa Bojanic <sasaboy@together.at>
   # buildDoc target now also builds JavaDoc API documentation

2011-04-04 Sasa Bojanic <sasaboy@together.at>
   # Project restructured, build scripts changed (nsis moved to tools folder, docbook files moved to tools\docbook folder)

2011-04-02 Sasa Bojanic <sasaboy@together.at>
   # Project restructured, build scripts changed (all libraries now in tools sub-folders)

2011-04-01 Sasa Bojanic <sasaboy@together.at>
   # Some classes changed name (*GraphParticipant* to *GraphSwimlane*).
   # API docu improved
   
2011-03-28 Sasa Bojanic <sasaboy@together.at>
   # jxpdl.jar updated to SVN Revision 54
   # Added support for "Script" Activity type (TaskScript from XPDL).
   # Improved property panels for DataField and FormalParameter elements
   # Changed property panels for ActualParameter/InitialValue/DeadlineDuration/Condition elements
   # Various improvements
   
2011-03-23 Sasa Bojanic <sasaboy@together.at>
   # Removed dependency to TAS
   
2011-03-22 Sasa Bojanic <sasaboy@together.at>